--- a/faceproject/Templates/base.html
+++ b/faceproject/Templates/base.html
@@ -20,6 +20,11 @@
         .gallery-img {
             transition: transform 0.3s;
             cursor: pointer;
+            transition: transform 0.3s;
+            cursor: pointer;
+            width: 300px;
+            height: 300px;
+            object-fit: contain;
         }
         .gallery-img:hover {
             transform: scale(1.05);
