--- a/faceproject/Templates/error.html
+++ b/faceproject/Templates/error.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% if error %}
 <div class="alert alert-danger">
     <h4 class="alert-heading">Error Occurred</h4>
     <p>{{ error }}</p>
     <hr>
-    <a href="{% url 'home' %}" class="btn btn-outline-danger">Return Home</a>
+    <a  class="btn btn-outline-danger">Return Home</a>
 </div>
+{% endif %}
 {% endblock %}
