--- a/faceproject/Templates/login.html
+++ b/faceproject/Templates/login.html
@@ -6,6 +6,12 @@
         <h2 class="mb-4">Login</h2>
         <form method="post">
             {% csrf_token %}
+            {% if form.non_field_errors %}
+            <div class="alert alert-danger">
+                {{ form.non_field_errors }}
+            </div>
+            {% endif %}
+            
             <div class="mb-3">
                 <label class="form-label">Username</label>
                 {{ form.username }}
